--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
     <nav>
         <h1>LAZAREV.</h1>
+        <!-- <div class="threeline">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div> -->
         <div class="nav-part2">
             <div class="nav-elem">
                 <h4>case studies</h4>
@@ -68,10 +73,18 @@
                         data-original="M65.72 109.14c10.08 0 17.76-3.78 23.04-11.34 5.4-7.68 8.1-17.64 8.1-29.88 0-12.24-2.7-22.2-8.1-29.88-5.28-7.68-12.96-11.52-23.04-11.52-9.96 0-17.7 3.84-23.22 11.52-5.4 7.68-8.1 17.64-8.1 29.88 0 12.12 2.7 22.02 8.1 29.7 5.52 7.68 13.26 11.52 23.22 11.52Zm46.08 7.02c-11.64 12.6-27.06 18.9-46.26 18.9s-34.62-6.3-46.26-18.9C7.76 103.56 2 87.48 2 67.92c0-19.56 5.76-35.64 17.28-48.24C30.92 7.08 46.34.78 65.54.78s34.62 6.3 46.26 18.9c11.64 12.6 17.46 28.68 17.46 48.24 0 19.56-5.82 35.64-17.46 48.24Z">
                     </path>
                 </svg></span></button>
-        <div id="nav-bottom">
+        <div class="threeline">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+        <div id="nav-bottom" class="nav-bottom">
 
         </div>
     </nav>
+    <div id="nav-bottom" class="nav-bottom">
+
+    </div>
 
 
     <div id="main">
@@ -200,7 +213,7 @@
         </div>
         <div id="page5">
             <button>Become a Client
-                <!-- <i class="ri-arrow-right-up-line"></i> -->
+                <i class="ri-arrow-right-up-line"></i>
 
             </button>
             <div id="page5-right">
